test/errors/resolution/throwNonThrowing.chpl
module M {
  proc canThrow() {
    throw new owned Error();
  }
  canThrow();
}
