test/errors/resolution/throwNonThrowing.1.good
throwNonThrowing.chpl:2: In function 'canThrow':
throwNonThrowing.chpl:3: error: cannot throw in a non-throwing function
throwNonThrowing.chpl:1: In module 'M':
throwNonThrowing.chpl:2: note: the function is declared here
